--- a/.github/workflows/conf_push.yml
+++ b/.github/workflows/conf_push.yml
@@ -40,6 +40,10 @@ jobs:
         fi
       shell: bash
 
+    - name: see variables
+      run: |
+        echo "$GITHUB_ENV"
+        echo env.drift
     - name: Model Retraining if Data Drift detected
       if: env.drift == 'true'
       run: |
