--- a/.github/workflows/conf_push.yml
+++ b/.github/workflows/conf_push.yml
@@ -49,13 +49,13 @@ jobs:
           echo "$env.drift"
 
     - name: see variables 3
+      env:
+        VAR_JAJA: "de locos"
       run : | 
           echo "INSERTAR VARIABLES"
-          echo "chorradas=true" >> $VAR_JAJA
+          echo "hola, $VAR_JAJA"
     
-    - name: see variables_4
-      run: |
-          echo "$VAR_JAJA"
+
 
     - name: Model Retraining if Data Drift detected
       if: env.drift == 'true'
