--- a/.github/workflows/conf_push.yml
+++ b/.github/workflows/conf_push.yml
@@ -75,3 +75,27 @@ jobs:
         git add models/pipeline.pkl
         git commit -m "Update model after retraining on $(date -u +'%Y-%m-%d %H:%M:%S UTC')"
         git push
+      continue-on-error: true 
+
+    - name: Build Docker image
+      if: env.drift == 'true'
+      run: |
+        docker build -t adryCrespo/cf -f dockerfile .
+
+    - name: Log in to Docker Hub
+      if: env.drift == 'true'
+      run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
+
+    - name: Push Docker image to Docker Hub
+      if: env.drift == 'true'
+      run: |
+        docker push adryCrespo/cf:latest
+
+    - name: Notify about the process
+      run: |
+        if [[ "$GITHUB_ENV" == *"drift=false"* ]]; then
+          echo "No data drift detected. No retraining necessary."
+        else
+          echo "Data drift detected. Model retrained and deployed."
+        fi
+      shell: bash
